--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Logs & Fine-tuned Model
+backend/logs
+backend/fine_tuned_response_model
+backend/response_generation_results
+
 # C extensions
 *.so
 
