Update .gitignore to exclude app.py

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ __pycache__/
 # Logs & Fine-tuned Model
 backend/logs
 backend/fine_tuned_mental_health_model
+backend/results
+app.py
 backend/response_generation_results
 
 # C extensions
